NewFlameHM/force-app/main/default/objects/Menu__c/fields/Approval_Reject_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reject_Comments__c</fullName>
    <description>Has the details about approval or reject comments</description>
    <label>Approval/Reject Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>