NewFlameHM/force-app/main/default/objects/Menu__c/fields/FeedBack__c.field-meta.xml
<CustomField>
    <fullName>FeedBack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FeedBack</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Menus</relationshipLabel>
    <relationshipName>Menus</relationshipName>
    <type>Lookup</type>
</CustomField>