NewFlameHM/force-app/main/default/objects/Menu__c/fields/Is_notification_sent__c.field-meta.xml
<CustomField>
    <fullName>Is_notification_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is notification sent?</label>
    <type>Checkbox</type>
</CustomField>