NewFlameHM/force-app/main/default/objects/Menu__c/fields/Is_PreBooked__c.field-meta.xml
<CustomField>
    <fullName>Is_PreBooked__c</fullName>
    <formula>TODAY() ==  Date__c - Prebooking_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PreBooked?</label>
    <type>Checkbox</type>
</CustomField>