NewFlameHM/force-app/main/default/objects/Menu__c/fields/Is_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Is_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scheduled?</label>
    <type>Checkbox</type>
</CustomField>