NewFlameHM/force-app/main/default/objects/Menu__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Menus</relationshipLabel>
    <relationshipName>Menus</relationshipName>
    <type>Lookup</type>
</CustomField>