NewFlameHM/force-app/main/default/objects/Menu__c/fields/Next_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Execution_Date__c</fullName>
    <label>Next Execution Date</label>
    <type>Date</type>
</CustomField>