NewFlameHM/force-app/main/default/objects/Menu__c/fields/No_of_Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>No_of_Target_Audience__c</fullName>
    <label>No of Target Audience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>