NewFlameHM/force-app/main/default/objects/Menu__c/fields/Prebooking_Days__c.field-meta.xml
<CustomField>
    <fullName>Prebooking_Days__c</fullName>
    <label>Prebooking Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>