NewFlameHM/force-app/main/default/objects/Menu__c/recordTypes/Multi_Day.recordType-meta.xml
<RecordType>
    <fullName>Multi_Day</fullName>
    <active>true</active>
    <label>Multi Day</label>
</RecordType>