NewFlameHM/force-app/main/default/objects/Menu__c/recordTypes/Quote.recordType-meta.xml
<RecordType>
    <fullName>Quote</fullName>
    <active>false</active>
    <label>Quote</label>
</RecordType>