NewFlameHM/force-app/main/default/objects/Menu__c/recordTypes/Single_Day.recordType-meta.xml
<RecordType>
    <fullName>Single_Day</fullName>
    <active>true</active>
    <label>Single Day</label>
</RecordType>