NewFlameHM/force-app/main/default/objects/Menu__c/listViews/Mess_Manager_Menu.listView-meta.xml
<ListView>
    <fullName>Mess_Manager_Menu</fullName>
    <filterScope>Queue</filterScope>
    <label>Mess Manager</label>
    <queue>Mess_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>